2008-04-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-status-prepare-status-buffer):
	Reset vc-parent-buffer-name.

2008-04-06  Jason Rumney  <jasonr@gnu.org>

	* language/burmese.el ("Burmese"): Make sample text consistent with
	language name.

2008-04-06  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb): New group.
	(gdb-debug-log-max, gdb-enable-debug)
	(gdb-cpp-define-alist-program, gdb-cpp-define-alist-flags)
	(gdb-show-main, gdb-many-windows, gdb-use-separate-io-buffer)
	(gdb-speedbar-auto-raise, gdb-use-colon-colon-notation)
	(gdb-show-changed-values, gdb-max-children)
	(gdb-delete-out-of-scope, gdb-same-frame, gdb-find-source-frame)
	(breakpoint-enabled, breakpoint-disabled, gdb-max-frames)
	(gdb-all-registers, gdb-memory-repeat-count, gdb-memory-format)
	(gdb-memory-unit): Move to new group from GUD group.
	(menu): Allow customization from GDB-UI menu-item.

2008-04-05  Chong Yidong  <cyd@stupidchicken.com>

	* dired-aux.el (dired-overwrite-confirmed): Supply initial value.

2008-04-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el (vc-bzr-log-view-mode, vc-bzr-annotate-command)
	(vc-bzr-annotate-time, vc-bzr-annotate-extract-revision-at-line):
	Revision numbers can include ".".

	* diff-mode.el (diff-end-of-hunk): Be careful not to overlook trailing
	"+" lines not accounted for by counting "-" and context lines.

2008-04-05  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-service-open-file): Use file URL instead of
	file name string.

2008-04-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el (vc-bzr-annotate-command): Preserve line alignment.
	(vc-bzr-annotate-time): Accept space used to preserve alignment.

2008-04-05  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/advice.el (defadvice): Add usage pattern.

2008-04-05  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el: Add advice about using Cygwin GDB (from a
	thread in [h-e-w]).
