@@ -9,7 +9,7 @@
 ;; Author: Michael Kifer <kifer@cs.stonybrook.edu>
 ;; Keywords: emulations
 
-(defconst viper-version "3.14 of January 09, 2008"
+(defconst viper-version "3.14 of April 06, 2008"
   "The current version of Viper")
 
 ;; This file is part of GNU Emacs.
