@@ -1,3 +1,12 @@
+2008-04-06  Michael Kifer  <kifer@cs.stonybrook.edu>
+	
+	* viper*.el (viper-search-wrap-around-t): replace with
+	viper-search-wrap-around.
+	
+	* ediff*.el: replace 3-argument 'require' statements with 1-argument
+	ones (wrapped in if's). For compatibility with the current stable
+	version of XEmacs.
+	
 2008-04-06  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* vc.el (vc-status-prepare-status-buffer):
